# meld

./: .bumpversion.cfg  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  LICENSE  README.md  explicit_solvent_documentation.md  explicit_solvent_documentation.rst  mypy.ini  new_file  setup.py
.github/workflows/: CI.yml
Examples/: heuristics.py
devtools/: README.md  conda-build-all  docker-build.sh  osx-build.sh  run_mypy.sh  run_tests.py
devtools/conda/: build.sh  meta.yaml
devtools/conda/dev/: build.sh  meta.yaml
devtools/conda/master/: build.sh  meta.yaml
docs/: Makefile  c++-api.rst  conf.py  explicit_solvent.rst  getting_started.rst  index.rst  python-api.rst
docs-source/: C++ API Reference.html  CMakeLists.txt  DoxyfileC++.in
docs/_templates/: custom-class-template.rst
docs/explain/: index.rst  indexing.rst  param_sampling.rst
docs/how_to/: explicit_solvent.rst  index.rst  mapping.rst  parameter_sampling.rst  using_grappa.rst
docs/reference/: c++-api.rst  index.rst  meld.comm.rst  meld.parse.rst  meld.pdb_writer.rst  meld.remd.adaptor.rst  meld.remd.ladder.rst  meld.remd.launch.rst  meld.remd.master_runner.rst  meld.remd.multiplex_runner.rst  meld.remd.reseed.rst  meld.remd.slave_runner.rst  meld.system.builder.rst  meld.system.openmm_runner.cmap.rst  meld.system.openmm_runner.runner.rst  meld.system.openmm_runner.softcore.rst  meld.system.protein.rst  meld.system.restraints.rst  meld.system.runner.rst  meld.system.state.rst  meld.system.system.rst  meld.util.rst  meld.vault.rst  python-api.rst
docs/tutorial/: getting_started.rst  index.rst  protein-peptide.rst
docs/tutorial/CryoEM_MELD_tutorial/: CryoEM-MELD.rst  CryoEM_MELD.rst  setup_MELD.py  system.mdcrd  tleap.in
docs/tutorial/Protein_peptide_tutorial/: change_coor.py  pdb_contact.py  protein-peptide.rst  protein_peptide.rst  setup_MELD.py  setup_binding_meld.py  topol.top
docs/tutorial/cryo_em_tutorial/: 2xhx_potential-map.dx  cryo_em.rst  job.sh  minimize.in  minimize_gpu.sh  system.top
docs/tutorial/cryofold_tutorial/: 4ake_t_c2.mrc  cryofold.rst  setup_cryofold.py
docs/tutorial/gameld_tutorial/: gameld.rst  setup_CPI_gameld.py
docs/tutorial/protein_peptide_tutorial/: pdb_contact_complex.py  protein_peptide.rst
docs/tutorial/use_histogram/: analysis_toolkit.rst  analyze_histograms.py  histogram.rst  setup_Meld.py
docs/tutorial/using_grappa/: using_grappa.rst
docs/userguide/: article1.rst  article2.rst  article3.rst  index.rst
meld/: __init__.py  adaptor.py  comm.py  gmmfit.py  helpers.py  interfaces.py  ladder.py  parse.py  pdb_writer.py  remd_runner.py  runner.py  test_install.py  util.py  vault.py
meld/remd/: __init__.py  adaptor.py  follower.py  ladder.py  launch.py  leader.py  master_runner.py  multiplex_runner.py  permute.py  reseed.py  slave_runner.py  worker.py
meld/runner/: __init__.py  cmap.py  fake_runner.py  openmm_runner.py
meld/runner/maps/: ala_beta.txt
meld/runner/transform/: __init__.py  cmap.py  rest2.py  restraints.py
meld/sa/: runner.py
meld/slow_tests/real_remd/: __init__.py  test_real_remd.py
meld/slow_tests/real_remd_explicit_multiplex/: system.mdcrd  test_explicit.py
meld/slow_tests/real_remd_multiplex/: __init__.py  test_real_remd.py
meld/slow_tests/real_remd_multiplex_big_timestep/: test_real_remd.py
meld/system/: __init__.py  amber.py  builder.py  density.py  gameld.py  indexing.py  mapping.py  meld_system.py  montecarlo.py  openmm_runner.py  options.py  param_sampling.py  patchers.py  pdb_writer.py  protein.py  restraints.py  runner.py  runners.py  scalers.py  state.py  subsystem.py  system.py  temperature.py
meld/system/builders/: build_elastic_network_restraints.py  spec.py
meld/test/: helper.py  test_adaptor.py  test_ladder.py  test_parse.py  test_remd_runner.py  test_vault.py
openmmapi/include/: ExampleForce.h  ExampleKernels.h  MeldForce.h  RdcForce.h  meldKernels.h
openmmapi/src/: ExampleForce.cpp  ExampleForceImpl.cpp  MeldForce.cpp  MeldForceImpl.cpp  RdcForce.cpp  RdcForceImpl.cpp
plugin/: CMakeLists.txt  README.md
plugin/build_cuda11/: CMakeCache.txt  CMakeDoxyfile.in  CMakeDoxygenDefaults.cmake  CTestTestfile.cmake  DoxyfileC++  Makefile  cmake_install.cmake  install_manifest.txt
plugin/build_cuda11/docs-source/: CTestTestfile.cmake  Makefile  cmake_install.cmake
plugin/build_cuda11/python/: CTestTestfile.cmake  Makefile  cmake_install.cmake  setup.py
plugin/build_cuda11/serialization/tests/: CTestTestfile.cmake  Makefile  TestSerializeMeldForce  cmake_install.cmake
plugin/devtools/: osx-build.sh
plugin/devtools/conda/dev/: meta.yaml
plugin/devtools/conda/master/: meta.yaml
plugin/docs-source/: CMakeLists.txt  DoxyfileC++.in
plugin/openmmapi/include/: MeldForce.h  MeldKernels.h  RdcForce.h
plugin/openmmapi/include/internal/: MeldForceImpl.h
plugin/openmmapi/src/: MeldForce.cpp  MeldForceImpl.cpp  RdcForce.cpp
plugin/python/: meldplugin.i  setup.py
plugin/serialization/src/: MeldForceProxy.cpp  MeldSerializationProxyRegistration.cpp  RdcForceProxy.cpp  RdcSerializationProxyRegistration.cpp
plugin/serialization/tests/: CMakeLists.txt  TestSerializeMeldForce.cpp  TestSerializeRdcForce.cpp
python/: CMakeLists.txt  exampleplugin.i  meldplugin.i  setup.py
run_meld/: extract_trajs.slurm  run.sh  setup (1).sh  setup.py  setup_grappa.py  tleap.py
scripts/: analyze_energy  analyze_remd  cryofold2_setup  density_rank  extract_meld_energy  extract_trajectory  launch_remd  launch_remd_multiplex  prepare_restart  process_density_map  process_fragments
serialization/include/: ExampleForceProxy.h  MeldForceProxy.h  RdcForceProxy.h
serialization/src/: ExampleForceProxy.cpp  ExampleSerializationProxyRegistration.cpp  MeldForceProxy.cpp  MeldSerializationProxyRegistration.cpp  RdcForceProxy.cpp  RdcSerializationProxyRegistration.cpp
serialization/tests/: CMakeLists.txt  TestSerializeExampleForce.cpp  TestSerializeMeldForce.cpp  TestSerializeRdcForce.cpp
test_density/: 4ake_t_4A.mrc  setup_emap.py  system.top
(+132 files in other folders)
